added random comment generator & conditional logic for spam reporting

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -6,7 +6,9 @@
   }
   
 .header__container {
-    display: inline-flex;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
     padding: $s-size;
 }
 
