--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,7 @@
 @import './base/settings';
 @import './base/base';
-@import './components/header'
+@import './components/add-comment';
+@import './components/button';
+@import './components/comment';
+@import './components/header';
+@import './components/widget'
